[package]
name = "mos_web"
version = "0.1.0"
authors = ["Rudra Panda <rudra.panda@target.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mos_rust = {path = "../mos_rust"}
actix-web = "3.3.2"
actix-rt = "2.2.0"
serde = {version = "1.0.127", features = ["derive"]}